# Hembudget

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Ekonomilabbet _standalone_.html  Ekonomilabbet _v2.html  Ekonomilabbet-standalone-v4.html  Ekonomilabbet-standalone_v3.html  Ekonomilabbet-standalone_v5.html  README.md  app.json  deploy.sh  e2e_import.py  e2e_test.py  entrypoint.sh  pgbouncer.ini  render.yaml
backend/: .env  pyproject.toml
backend/hembudget/: cache.py  config.py  demo.py  main.py
backend/hembudget/api/: admin.py  ai.py  ai_admin.py  allabolag.py  arbetsformedlingen.py  auth.py  backup.py  balances.py  bank.py  biz_class_actions.py  boendemarknad.py  budget.py  chat.py  company_jobs.py  credit.py  deps.py  (+42 more)
backend/tests/: conftest.py  test_achievements.py  test_affordability.py  test_ai_api_key.py  test_ai_tool_use.py  test_api_bank.py  test_api_budget.py  test_api_employer.py  test_api_employment.py  test_api_funds.py  test_api_parse_pdf_account.py  test_api_v2.py  test_arbetsformedlingen.py  test_ask_threads.py  test_assignment_checkers.py  test_auto_budget.py  test_balances.py  test_boendemarknad.py  test_budget_seed.py  test_business_engine.py  test_cache.py  test_canonical_categories.py  test_car_seed.py  test_categorize.py  test_chat_tools.py  test_courtage.py  test_credit_endpoints.py  test_credit_scoring.py  test_credit_sms.py  test_delete_transaction.py  test_delivery_quiz.py  test_dental_seed.py  test_difficulty.py  test_e2e_bank_cycle.py  test_e2e_biz_mode.py  test_e2e_create_student.py  test_edit_transaction.py  test_elpris.py  test_email_auth.py  test_event_actions.py  (+94 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/icons/: README.md
src-tauri/src/: main.rs
(+543 files in other folders)
