[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hembudget"
version = "0.1.0"
description = "Lokal AI-driven familjeekonomi med LM Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlcipher3-binary>=0.5.2; platform_system != 'Windows'",
    "openai>=1.30",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "argon2-cffi>=23.1",
    "python-dateutil>=2.9",
    "chardet>=5.2",
    "pytesseract>=0.3.10",
    "Pillow>=10.2",
    "pypdfium2>=4.28",
    "reportlab>=4.1",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "rapidfuzz>=3.6",
    "matplotlib>=3.8",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "pyinstaller>=6.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hembudget*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring running LM Studio",
]

[tool.ruff]
line-length = 100
target-version = "py311"
